# skill-injector

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  DEVELOPING.md  LICENSE  PLAN.md  README.md  cliff.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  prepare-release.yml  release.yml
docs/: injection-improvements.md  review-backlog-2026-06-24.md
examples/: eval.rs
hooks/: hooks.json
opencode/: README.md  package.json  ski.ts  tsconfig.json
scripts/: install.sh  ski-bootstrap.sh  version-sync.sh
src/: confidence.rs  config.rs  context.rs  debug.rs  history.rs  hook.rs  index.rs  init.rs  inject.rs  lexical.rs  lib.rs  main.rs  observe.rs  paths.rs  pipeline.rs  rank.rs  rerank.rs  session.rs  session_start.rs  skill.rs  suggest.rs  telemetry.rs  text.rs  trace.rs
src/embed/: bow.rs  fast.rs  mod.rs
tests/: golden.rs  phrase.rs
tests/data/: README.md  anthropic_skills_prompts.tsv  context_prompts.tsv  phrase_trigger_prompts.tsv  popular_skills_prompts.tsv  run-anthropic-prompts.sh
tests/fixtures/skills/add-ansible-role/: SKILL.md
tests/fixtures/skills/debug-lemonade/: SKILL.md
tests/fixtures/skills/git-attribution/: SKILL.md
tests/fixtures/skills/handoff/: SKILL.md
tests/fixtures/skills/react-ts-setup/: SKILL.md
tests/fixtures/skills/uv-setup/: SKILL.md
