[package]
name = "ski"
version = "0.1.0"
edition = "2021"
description = "skill-inject: local semantic auto-injection of agent skills"
license = "MIT"

[[bin]]
name = "ski"
path = "src/main.rs"

[lib]
name = "ski"
path = "src/lib.rs"

[features]
# Default build ships real bge-small / MiniLM embeddings via `fastembed` (ONNX;
# the model downloads once at runtime, then offline). Build with
# `--no-default-features` for the offline, dependency-light bag-of-words embedder
# (no ONNX, no network) — used by the deterministic test/CI lane.
default = ["fastembed"]
fastembed = ["dep:fastembed"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# rustls (not native-tls) for the model download so the feature build needs no
# system OpenSSL; ort-download-binaries fetches the ONNX runtime at build time.
fastembed = { version = "4", optional = true, default-features = false, features = [
    "ort-download-binaries",
    "hf-hub-rustls-tls",
] }

[profile.release]
opt-level = 3
lto = true
strip = true

# --- packaging metadata (release pipeline) ---------------------------------
# Both packagers ship the default (fastembed) binary; the ONNX runtime is
# statically linked into `ski`, so the package only carries the one binary plus
# docs. The bge model + reranker still download on first run (needs network).
[package.metadata.deb]
maintainer = "Brandon Guest <bguest95@gmail.com>"
section = "utils"
priority = "optional"
extended-description = """\
skill-inject (ski): local, model-agnostic semantic auto-injection of agent \
skills for Claude Code and opencode. Embeds the prompt locally, ranks it \
against skill descriptions, and injects the matched skill via hooks."""
assets = [
    ["target/release/ski", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/ski/README.md", "644"],
    ["LICENSE", "usr/share/doc/ski/LICENSE", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/ski", dest = "/usr/bin/ski", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/ski/README.md", mode = "644" },
    { source = "LICENSE", dest = "/usr/share/doc/ski/LICENSE", mode = "644" },
]
